# CurrencyHedgeCalculator

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/currencyhedgecalc/: __init__.py  currencyhedgecalc.py
tests/: __init__.py  test_hedgecalc.py
vignettes/: vignette_hedgecalc.ipynb
