[tool.poetry]
name = "currencyhedgecalc"
version = "1.0.1"
description = "The CurrencyHedgeCalculator is a Python package to manage foreign exchange transaction exposure using **money market hedging**. It leverages real-time data from exchange rate and interest rate APIs to calculate hedging strategies for foreign currency **Accounts Payable (AP)** and **Accounts Receivable (AR)**."
authors = ["Fung Chau"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

